<resources>
<string name="app_name">"WebCams"</string>
<string name="about_body"><![CDATA[
    <b>Author: <a href="http://www.yetanotherview.cz">Tomas Valenta</a></b><br>
    <b>Contribute:</b> Source code on <b><a href="https://github.com/TomasValenta/WebCamViewer">GitHub</a></b><br>
    For help translating into your language <b><a href="http://goo.gl/MUJqYZ">use this online tool</a></b>.<br>
    <br>
    <b>Special thanks to these open source tools:</b><br>
    <b><a href="https://developer.android.com/tools/support-library/features.html">Support Libraries</a></b><i> by Google, Inc.</i><br>
    <b><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></b><i> by Aidan Follestad.</i><br>
    <b><a href="https://github.com/bumptech/glide">Glide</a></b><i> by Bump, Inc.</i><br><br>
    <b>Special thanks to these translators:</b><br>
    German - <b><a href="http://blog.strubbl.de/">Sven Fischer</a></b><br>
    Japanese - <b><a href="mailto:naofum@gmail.com">Naofumi</a></b><br>
    Norwegian - <b><a href="http://0p.no/">Lars Falk-Petersen</a></b><br>
    <br>
    <b>Also a huge thanks to <a href="http://upload.wikimedia.org/wikipedia/commons/b/b3/Shield-Trinity-Scutum-Fidei-English.svg">God, Jesus and Holy Spirit!</a> As well as, <a href="https://plus.google.com/111192437899852242451/">Tomas Borov</a>, <a href="https://plus.google.com/104896455725487013630/">Radek Matouch</a></b> for all of his help + useful tips.
]]></string>
<string name="action_menu_about">"About"</string>
<string name="action_settings">"Settings"</string>
<string name="pref_general">"General"</string>
<string name="action_new">"Add"</string>
<string name="action_delete">"Delete"</string>
<string name="action_deleted">"Deleted"</string>
<string name="pref_delete_all">"Clear the current database"</string>
<string name="pref_delete_all_summ">"Delete all WebCams from the current database"</string>
<string name="are_you_sure">"Are you sure?"</string>
<string name="Yes">"Yes"</string>
<string name="No">"No"</string>
<string name="input_dialog_title">"New WebCam"</string>
<string name="webcam_name">"Name"</string>
<string name="webcam_url">"Web address"</string>
<string name="webcam_category">"Categories"</string>
<string name="hint_webcam_name">"My WebCam"</string>
<string name="hint_webcam_url">"http://www.example.com/webcam/cam.jpg"</string>
<string name="how_to">"How to"</string>
<string name="dialog_positive_text">"Save"</string>
<string name="dialog_positive_toast_message">"Saved!"</string>
<string name="pref_database">"Database"</string>
<string name="pref_import_from_ext">"Import from External Storage"</string>
<string name="pref_import_from_ext_summ">"Import WebCam database from External Storage"</string>
<string name="pref_export_to_ext">"Export to External Storage"</string>
<string name="pref_export_to_ext_summ">"Export WebCam database to External Storage"</string>
<string name="export_title">"Enter the file name"</string>
<string name="export_input_sample">"E.g. MyWebCams"</string>
<string name="import_failed">"Import Failed!"</string>
<string name="export_done">"Export Successful!"</string>
<string name="export_failed">"Export Failed!"</string>
<string name="export_message">"This will create a new file in this folder:"</string>
<string name="pref_clean_folder">"Delete backups"</string>
<string name="pref_clean_folder_summ">"Delete all files from the backup folder"</string>
<string name="nothing_to_import">"Nothing to import"</string>
<string name="pref_full_screen">"Immersive mode"</string>
<string name="pref_full_screen_summ">"Run application in immersive full-screen mode (only KitKat or higher)"</string>
<string name="action_edit">"Edit"</string>
<string name="action_sort">"Sort"</string>
<string name="add_new_category_summary">"Add new category to the database"</string>
<string name="edit_category_summary">"Edit category name in database"</string>
<string name="delete_category_summary">"Delete category from database"</string>
<string name="new_category_name">"Category Name"</string>
<string name="new_category_hint">"New list"</string>
<string name="dismiss">"DISMISS"</string>
<string name="refresh">"Refresh"</string>
<string name="pref_zoom">"Zoom"</string>
<string name="pref_zoom_summary">"Set maximum zoom level in Full Screen view"</string>
<string name="action_menu_help">"Help"</string>
<string name="pref_auto_refresh">"Auto Refresh"</string>
<string name="pref_auto_refresh_summary">"Enable or disable WebCam auto refreshing"</string>
<string name="auto_refresh_interval">"Auto Refresh interval"</string>
<string name="auto_refresh_interval_summary">"Enter auto refreshing interval in seconds"</string>
<string name="image_description">"WebCam image"</string>
<string name="category_array_empty">"No categories created yet"</string>
<string name="category_array_choose">"Choose categories"</string>
<string name="all_webcams">"All WebCams"</string>
<string name="pref_import_from_server">"Import from Server"</string>
<string name="auto_refresh_fullscreen">"Only in Full Screen view"</string>
<string name="auto_refresh_fullscreen_summary">"Enable auto refresh only in full-screen view"</string>
<string name="also_delete_webcams">"Also delete WebCams that are only in this category?"</string>
<string name="imported">"Imported"</string>
<string name="nothing_to_export">"Nothing to export"</string>
<string name="old_database_detected">"Old database detected"</string>
<string name="old_database_detected_summary">"This is an older type of backup database! This file will be automatically converted to the new format and then deleted."</string>
<string name="nothing_to_import_summary">"You must first create some backups."</string>
<string name="nothing_to_export_summary">"You must first create some WebCams in your database."</string>
<string name="import_summary">"Delete all WebCams from the current database before importing?"</string>
<string name="importing_from_server">"Importing from server"</string>
<string name="please_wait">"Please wait..."</string>
<string name="server_unavailable">"Server is unavailable"</string>
<string name="server_unavailable_summary">"You are not connected to the Internet or the server is temporarily unavailable..."</string>
<string name="choose">"CHOOSE"</string>
<string name="available_options">"Available options"</string>
<string name="external_files">"External files"</string>
<string name="popular_webcams">"Popular WebCams"</string>
<string name="selecting_by_country">"Selecting by Country"</string>
<string name="latest_webcams">"Latest WebCams"</string>
<string name="popular">"Popular"</string>
<string name="latest">"Latest"</string>
<string name="no_new_webcams">"No new WebCams"</string>
<string name="no_new_webcams_summary">"There are no new WebCams since the last download."</string>
<string name="countries">"Countries"</string>
<string name="add_options">"Add options"</string>
<string name="add_manually">"Add manually"</string>
<string name="import_done">"Import Successful!"</string>
<string name="import_progress">"Importing in progress and searching for possible duplicates."</string>
<string name="report">"Report"</string>
<string name="import_successfully">"Import was successfully completed! Check Navigation Drawer on the left side."</string>
<string name="new_webcams">"New WebCams:"</string>
<string name="reassigned">"Reassigned:"</string>
<string name="other">"Other"</string>
<string name="pref_reset_last_check">"Reset last checkpoint"</string>
<string name="pref_reset_last_check_summary">"Reset last checkpoint for Popular and Latest WebCams"</string>
<string name="reset_last_check_message">"Are you sure you want to reset last checkpoint for Popular and Latest WebCams?"</string>
<string name="community_list">"Community list"</string>
<string name="submit_for_approval">"Submit this WebCam for approval"</string>
<string name="send_via_email">"Send via email..."</string>
<string name="no_email_clients_installed">"There are no email clients installed."</string>
<string name="import_webcams_now">"IMPORT WEBCAMS NOW!"</string>
<string name="show_me_help">"SHOW ME HELP"</string>
<string name="oops">"Oops!"</string>
<string name="also_delete_all_categories">"Also delete all created categories?"</string>
<string name="import_selected">"IMPORT SELECTED"</string>
<string name="selected">"Selected"</string>
<string name="pref_screen_always_on">"Keep Screen On"</string>
<string name="pref_screen_always_on_summary">"Prevents screen from turning off when the application is in the foreground"</string>
<string name="welcome_content">"Thank you for installing this app! If you have any suggestions for improvement or have found an error, please leave a comment in the Google Play Store or GitHub. Select from the following options:"</string>
<string name="nothing_to_refresh">"Nothing to refresh"</string>
<string name="refresh_is_running">"Refresh is running..."</string>
<string name="close">"CLOSE"</string>
<string name="done">"Done"</string>
<string name="enter_place_or_country">"Enter a place or a country"</string>
<string name="welcome_to_version">"Welcome to the new version"</string>
<string name="no_categories_found">"No categories found"</string>
<string name="action_sort_date">"Ascending by Date"</string>
<string name="action_sort_date_desc">"Descending by Date"</string>
<string name="action_sort_name">"Ascending by Name"</string>
<string name="action_sort_name_desc">"Descending by Name"</string>
<string name="report_problem">"Report a problem"</string>
<string name="view">"View"</string>
<string name="webcam_coordinates">"Coordinates"</string>
<string name="hint_webcam_latitude">"50.770481 (latitude)"</string>
<string name="hint_webcam_longitude">"14.209077 (longitude)"</string>
<string name="maximize">"Maximize"</string>
<string name="save_to">"Save to..."</string>
<string name="share">"Share"</string>
<string name="submit_to_appr">"Submit for approval"</string>
<string name="back">"Back"</string>
<string name="show_on_map">"Show on map"</string>
<string name="zoom_small">"zoom"</string>
<string name="undo">"UNDO"</string>
<string name="nearby">"Nearby"</string>
<string name="select_radius">"Select a radius"</string>
<string name="no_nearby_webcams">"No WebCams nearby"</string>
<string name="no_nearby_webcams_summary">"No WebCams found nearby. Please try a larger radius."</string>
<string name="pref_clear_cache_and_tmp">"Clear cache"</string>
<string name="pref_clear_cache_and_tmp_summary">"Clear all cache and temporary folders of this application"</string>
<string name="nearby_webcams">"Nearby WebCams"</string>
<string name="all">"All"</string>
<string name="no_coordinates">"No coordinates"</string>
<string name="no_coordinates_summary">"This WebCam does not contain information about the location (coordinates can be added directly in the edit dialog)."</string>
<string name="images_on">"Images ON"</string>
<string name="images_off">"Images OFF"</string>
<string name="donate">"Donate"</string>
<string name="drawer_open">"Open navigation drawer"</string>
<string name="drawer_close">"Close navigation drawer"</string>
<string name="selecting_by_name">"Selecting by Name"</string>
<string name="action_search">"Search"</string>
<string name="selecting_from_map">"Selecting from Map"</string>
<string name="simple_listview">"Simple list"</string>
<string name="simple_listview_summary">"If realistic previews are disabled, then show only a simple list of names"</string>
<string name="delete_webcams">"Delete selected"</string>
<string name="delete_webcams_summary">"Delete selected WebCams from the current database"</string>
<string name="submit_suggestion">"Submit a Suggestion"</string>
<string name="submit_suggestion_hint">"My favorite place"</string>
<string name="action_sort_location">"From the nearest"</string>
<string name="action_sort_location_desc">"From the farthest"</string>
<string name="from_map">"From map"</string>
</resources>