<!--
~ *******************************************************************************
~ Copyright (c) 2013-2015 Tomas Valenta
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
~ *****************************************************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webcam_name" />

        <EditText
            android:id="@+id/webcam_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_webcam_name"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webcam_url" />

        <EditText
            android:id="@+id/webcam_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_webcam_url"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:inputType="textUri"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webcam_category" />

        <Button
            android:id="@+id/webcam_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="17dip"
            android:layout_marginLeft="5dip"
            android:layout_marginStart="5dip"
            android:singleLine="true"/>

    <TextView
        android:id="@+id/shareCheckBoxTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community_list" />

        <CheckBox
            android:id="@+id/shareCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_for_approval"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginStart="5dip"/>

</LinearLayout>